Update Versions.java on adding new versions

2.0.0 [Large changing, in the future]
Added: GLULogger
Removed: Callbacks
Changed: Use Java 17!!

1.6.0

1.5.0 [Large changing]
Added: Loading matrix from array
Added: Tesselator
Added: Timer
Added: `Vao`
Added: Game engine
Added: Drawer

1.4.0
Changed: You can disable antialias now
Added: `TextRenderer` for legacy GL
Added: `DisplayListBuilder`
Added: `Vbo`

1.3.0
Changed: `GLFWindow` is `AutoCloseable` now
Changed: You can set resized, mouse pos, scroll cb and window icon to window
Changed: `IVertexBuilder` has rendering function
Changed: Use JOML 1.10.2
Fixed a bug: vertex buffer can clear outdated vertex now

1.2.0 [Large changing]
Added: `IVertexBuilder`
Added: `BaseMeshVertexBuilder`
Added: `MeshVertexBuilder`
Added: `Mesh3VertexBuilder`
Added: `ObjLoader`
Added: `ObjModel`
Added: `ObjModel2`
Added: `ObjModel3`
Added: Lighting system
    +Direction
    +DirectionalLight
    +PointLight
    +Material

1.1.0 [Large changing]
Added: `Math`
New internal feature: `AtlasLoomArray`
New internal feature: `MeshManager`
New internal feature: `MeshManager3`
New internal feature: `MeshManagerConstant`
Added: `FontTexture`
Added: `FontTextures`
Added: `Drawable`
Added: `DrawableText`
Added: `Mesh3#bindVao` and `Mesh3#unbindVao`
Changed: Mesh now supported to normal vertex
Changed: Use common utils now
Changed: `ShaderReader` and `MeshLoader` use UTF-8 not ANSI now
Changed: Rename `Window` to `GLFWindow`

1.0.0
Release
Added: More docs
Added: `Versions`
Added: `Window`
Added: `Framebuffer`
Changed: Rename `MeshVar` to `MeshMacro`
Changed: Rename `idxVbo` to `ibo`
Changed: `ShaderType#toString`: "vertexShader" -> "vertex shader"
Changed: Mesh color is optional now

0.9.0
Beta
Fixed a bug: `GLUtils.VERSION` was 0.7.0
Added: `ArrayHelper.toIArray`
Added: `ArrayHelper.expand`
Added: `GLUtils.isOlder`
Added: `GLUtils.isNewer`
Added: `GLUtils.isEqual`
Changed: Move `*Mesh*` to [base pkg].mesh

0.8.0