@@ -87,6 +87,17 @@ public class IndexedTesselator3 extends Tesselator3 {
         return this;
     }
 
+    /**
+     * {@inheritDoc}
+     *
+     * @since 1.6.0
+     */
+    @Override
+    public IndexedTesselator3 draw(int primitive) {
+        super.draw(primitive);
+        return this;
+    }
+
     public IndexedTesselator3 indices(final int... indices) {
         array = indices;
         return this;
@@ -100,8 +111,8 @@ public class IndexedTesselator3 extends Tesselator3 {
     }
 
     @Override
-    protected void render() {
-        glDrawElements(GL_TRIANGLES, array.length, GL_UNSIGNED_INT, 0);
+    protected void render(int primitive) {
+        glDrawElements(primitive, array.length, GL_UNSIGNED_INT, 0);
     }
 
     @Override
