@@ -6,10 +6,11 @@ Removed: Callbacks
 Changed: Use Java 17!!
 
 1.6.0
+Added: `Tesselator`
 
 1.5.0 [Large changing]
 Added: Loading matrix from array
-Added: Tesselator
+Added: `Tesselator3`
 Added: Timer
 Added: `Vao`
 Added: Game engine
